[tool.poetry]
name = "v2t"
version = "0.1.0"
description = ""
authors = ["sonac <sonag007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vosk = "^0.3.42"
python-dotenv = "^0.20.0"
python-telegram-bot = {version = "20.0a1", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
